[project]
name = "pylistenbrainz"
authors = [
  { name="Param Singh", email="iliekcomputers@gmail.com"},
]
description="A simple ListenBrainz client library for Python"
readme = "README.md"
requires-python=">=3.8"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
  'requests >= 2.31.0',
  'importlib-metadata >= 3.10.0; python_version < "3.10"'
]

[project.optional-dependencies]
tests = [
  'pytest == 7.4.4',
  'pytest-cov == 2.8.1'
]
build = [
  'build',
  'twine'
]
docs = [
  'sphinx == 3.0.1'
]

[project.urls]
Homepage = "https://github.com/paramsingh/pylistenbrainz"

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
