[project]
name = "liblistenbrainz"
authors = [
  { name="Param Singh", email="iliekcomputers@gmail.com"},
]
description="A simple ListenBrainz client library for Python"
readme = "README.md"
requires-python=">=3.8"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
  'requests >= 2.31.0',
  'importlib-metadata >= 3.10.0; python_version < "3.10"'
]

[project.optional-dependencies]
tests = [
  'pytest == 8.3.4',
  'pytest-cov >= 5.0.0'
]
build = [
  'build',
  'twine'
]
docs = [
  'sphinx == 3.0.1'
]

[project.urls]
Homepage = "https://github.com/metabrainz/liblistenbrainz"
Issues = "https://github.com/metabrainz/liblistenbrainz/issues"
Documentation = "https://liblistenbrainz.readthedocs.io"
Releases = "https://github.com/metabrainz/liblistenbrainz/releases"

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
